<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ph.kodego.leones.patricia.ivee.pomodoroapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_task"
        android:name="ph.kodego.leones.patricia.ivee.pomodoroapplication.ui.task.TaskFragment"
        android:label="@string/task"
        tools:layout="@layout/fragment_task">
        <action
            android:id="@+id/action_taskfragment_to_timerfragment"
            app:destination="@id/navigation_timer"/>

    </fragment>



    <fragment
        android:id="@+id/navigation_timer"
        android:name="ph.kodego.leones.patricia.ivee.pomodoroapplication.ui.timer.TimerFragment"
        android:label="@string/timer"
        tools:layout="@layout/fragment_timer"/>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="ph.kodego.leones.patricia.ivee.pomodoroapplication.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings"/>

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="ph.kodego.leones.patricia.ivee.pomodoroapplication.ui.statistics.StatisticsFragment"
        android:label="@string/statistics"
        tools:layout="@layout/fragment_statistics"/>
</navigation>