<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_margin="@dimen/layout_margin">

        <TextView
            android:id="@+id/text_view_today_s_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_extrabold"
            android:text="@string/today_s_task"
            android:textSize="@dimen/title_text_size"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/horizontal_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:clipToPadding="false"
            >
        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tasks"
            android:textSize="@dimen/title_text_size"
            android:fontFamily="@font/nunito_extrabold"
            android:textAlignment="center"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tasks_mini"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:textSize="25sp"
            >
        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/see_all_tasks_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="See All Tasks"
            android:textSize="@dimen/list_title_text_size"
            android:fontFamily="@font/nunito_extrabold"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/completed_tasks"
            android:textSize="@dimen/title_text_size"
            android:fontFamily="@font/nunito_extrabold"
            android:textAlignment="center"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/completed_tasks_mini"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:textSize="25sp"
            >

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/see_all_completed_tasks_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/see_all_completed_tasks"
            android:textSize="@dimen/list_title_text_size"
            android:fontFamily="@font/nunito_extrabold"
            android:textAlignment="center"/>

    </LinearLayout>



</ScrollView>