<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

        <androidx.preference.PreferenceCategory
                android:title="Task Settings"

                >
                //Task Name
                <EditTextPreference
                    app:key="ph.kodego.leones.patricia.ivee.timer.task_name"
                    app:title="@string/task_name"
                    android:summary="Add a name for your task."
                    android:dialogTitle="Enter a value"
                    android:defaultValue=""
                    android:inputType="text"/>

                <EditTextPreference
                    app:key="ph.kodego.leones.patricia.ivee.timer.task_description"
                    app:title="@string/task_description"
                    android:summary="Add a name for your task."
                    android:dialogTitle="Enter a value"
                    android:defaultValue=""
                    android:inputType="text"/>




        </androidx.preference.PreferenceCategory>
        <androidx.preference.PreferenceCategory
            android:title="Timer Settings">
<!--                FOCUS TIMER-->
                <com.h6ah4i.android.preference.NumberPickerPreferenceCompat
                    app:key="ph.kodego.leones.patricia.ivee.timer.timer_length"
                    app:nppc_maxValue="60"
                    app:nppc_minValue="1"
                    app:nppc_unitText="minutes"
                    app:nppc_wrapSelectorWheel="true"
                    app:summary="Change timer length in minutes
                    \n(Focus Timer)"
                    app:title="Focus Time Length" />

                <com.h6ah4i.android.preference.NumberPickerPreferenceCompat
                    app:key="ph.kodego.leones.patricia.ivee.timer.timer_short_break_length"
                    app:nppc_maxValue="60"
                    app:nppc_minValue="1"
                    app:nppc_unitText="minutes"
                    app:nppc_wrapSelectorWheel="true"
                    app:summary="Change timer length in minutes
                    \n(Short Break Timer)"
                    app:title="Short Break Length" />

<!--                LONG BREAK TIMER-->
                <com.h6ah4i.android.preference.NumberPickerPreferenceCompat
                    app:key="ph.kodego.leones.patricia.ivee.timer.timer_long_break_length"
                    app:nppc_maxValue="60"
                    app:nppc_minValue="1"
                    app:nppc_unitText="minutes"
                    app:nppc_wrapSelectorWheel="true"
                    app:summary="Change timer length in minutes
                    \n(Long Break Timer)"
                    app:title="Long Break Length" />

<!--             CYCLES-->
                <SeekBarPreference
                    android:key="ph.kodego.leones.patricia.ivee.timer.cycles"
                    app:title="@string/cycles"
                    android:summary="How many cycles do you need to finish your task?"
                    android:max="60"
                    app:showSeekBarValue="true"/>

<!--                LONG BREAK REPETITION-->
                <com.h6ah4i.android.preference.NumberPickerPreferenceCompat
                    android:key="ph.kodego.leones.patricia.ivee.timer.long_break_repetition"
                    app:nppc_maxValue="60"
                    app:nppc_minValue="1"

                    android:summary="After long hours of focusing,
                    \nwhen do you want to take a long rest?"
                    android:title="Long break Repetition"
                    app:seekBarIncrement="1"
                    app:showSeekBarValue="true"
                    app:nppc_unitText="long break at"/>
        </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>